<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_alarm_listview_item_repository"
        style="@style/ListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/textview_alarm_repository"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_alarm_listview_item_username"
        style="@style/ListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_alarm_listview_item_repository"
        android:paddingLeft="20dp"
        android:text="@string/textview_alarm_username"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_alarm_listview_item_date"
        style="@style/ListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_alarm_listview_item_username"
        android:paddingLeft="20dp"
        android:text="@string/textview_alarm_date"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/item_alarm_listview_vcs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:contentDescription="VCS"/>

</RelativeLayout>